# MakerspaceBadging

./: .clang-format  .gitignore  CMakeLists.txt  README.md
presentation/: QRCode.eps  presentation.tex
sql/: makerspace.sql
src/: Badging.cpp  Badging.hpp  SQLBridge.cpp  SQLBridge.hpp  SQLBridgeEnums.cpp  SQLBridgeEnums.hpp  main.cpp  menu.cpp  menu.hpp
